@@ -1,5 +1,10 @@
 2017-10-10  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* mcu/usb-usbip.c (usbip_run_server): Shutdown support.
+	(usb_lld_shutdown): Shutdown glace-fully.
+
+2017-10-10  NIIBE Yutaka  <gniibe@fsij.org>
+
 	* VERSION: 1.5.
 	* doc/chopstx.texi (VERSION): 1.5.
 	* doc/chopstx-api.texi: Regenerated.
